prql-compiler/src/snapshots/prql_compiler__parser__test__parse_into_parse_tree-2.snap
---
source: prql-compiler/src/parser.rs
expression: "parse_tree_of_str(\"select [a, b, c]\", Rule::func_curry)?"
---
[
    Pair {
        rule: func_curry,
        span: Span {
            str: "select [a, b, c]",
            start: 0,
            end: 16,
        },
        inner: [
            Pair {
                rule: ident,
                span: Span {
                    str: "select",
                    start: 0,
                    end: 6,
                },
                inner: [],
            },
            Pair {
                rule: expr,
                span: Span {
                    str: "[a, b, c]",
                    start: 7,
                    end: 16,
                },
                inner: [
                    Pair {
                        rule: expr_compare,
                        span: Span {
                            str: "[a, b, c]",
                            start: 7,
                            end: 16,
                        },
                        inner: [
                            Pair {
                                rule: expr_add,
                                span: Span {
                                    str: "[a, b, c]",
                                    start: 7,
                                    end: 16,
                                },
                                inner: [
                                    Pair {
                                        rule: expr_mul,
                                        span: Span {
                                            str: "[a, b, c]",
                                            start: 7,
                                            end: 16,
                                        },
                                        inner: [
                                            Pair {
                                                rule: list,
                                                span: Span {
                                                    str: "[a, b, c]",
                                                    start: 7,
                                                    end: 16,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: expr,
                                                        span: Span {
                                                            str: "a",
                                                            start: 8,
                                                            end: 9,
                                                        },
                                                        inner: [
                                                            Pair {
                                                                rule: expr_compare,
                                                                span: Span {
                                                                    str: "a",
                                                                    start: 8,
                                                                    end: 9,
                                                                },
                                                                inner: [
                                                                    Pair {
                                                                        rule: expr_add,
                                                                        span: Span {
                                                                            str: "a",
                                                                            start: 8,
                                                                            end: 9,
                                                                        },
                                                                        inner: [
                                                                            Pair {
                                                                                rule: expr_mul,
                                                                                span: Span {
                                                                                    str: "a",
                                                                                    start: 8,
                                                                                    end: 9,
                                                                                },
                                                                                inner: [
                                                                                    Pair {
                                                                                        rule: ident,
                                                                                        span: Span {
                                                                                            str: "a",
                                                                                            start: 8,
                                                                                            end: 9,
                                                                                        },
                                                                                        inner: [],
                                                                                    },
                                                                                ],
                                                                            },
                                                                        ],
                                                                    },
                                                                ],
                                                            },
                                                        ],
                                                    },
                                                    Pair {
                                                        rule: expr,
                                                        span: Span {
                                                            str: "b",
                                                            start: 11,
                                                            end: 12,
                                                        },
                                                        inner: [
                                                            Pair {
                                                                rule: expr_compare,
                                                                span: Span {
                                                                    str: "b",
                                                                    start: 11,
                                                                    end: 12,
                                                                },
                                                                inner: [
                                                                    Pair {
                                                                        rule: expr_add,
                                                                        span: Span {
                                                                            str: "b",
                                                                            start: 11,
                                                                            end: 12,
                                                                        },
                                                                        inner: [
                                                                            Pair {
                                                                                rule: expr_mul,
                                                                                span: Span {
                                                                                    str: "b",
                                                                                    start: 11,
                                                                                    end: 12,
                                                                                },
                                                                                inner: [
                                                                                    Pair {
                                                                                        rule: ident,
                                                                                        span: Span {
                                                                                            str: "b",
                                                                                            start: 11,
                                                                                            end: 12,
                                                                                        },
                                                                                        inner: [],
                                                                                    },
                                                                                ],
                                                                            },
                                                                        ],
                                                                    },
                                                                ],
                                                            },
                                                        ],
                                                    },
                                                    Pair {
                                                        rule: expr,
                                                        span: Span {
                                                            str: "c",
                                                            start: 14,
                                                            end: 15,
                                                        },
                                                        inner: [
                                                            Pair {
                                                                rule: expr_compare,
                                                                span: Span {
                                                                    str: "c",
                                                                    start: 14,
                                                                    end: 15,
                                                                },
                                                                inner: [
                                                                    Pair {
                                                                        rule: expr_add,
                                                                        span: Span {
                                                                            str: "c",
                                                                            start: 14,
                                                                            end: 15,
                                                                        },
                                                                        inner: [
                                                                            Pair {
                                                                                rule: expr_mul,
                                                                                span: Span {
                                                                                    str: "c",
                                                                                    start: 14,
                                                                                    end: 15,
                                                                                },
                                                                                inner: [
                                                                                    Pair {
                                                                                        rule: ident,
                                                                                        span: Span {
                                                                                            str: "c",
                                                                                            start: 14,
                                                                                            end: 15,
                                                                                        },
                                                                                        inner: [],
                                                                                    },
                                                                                ],
                                                                            },
                                                                        ],
                                                                    },
                                                                ],
                                                            },
                                                        ],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
