prql-compiler/src/snapshots/prql_compiler__parser__test__parse_into_parse_tree-7.snap
---
source: prql-compiler/src/parser.rs
expression: "parse_tree_of_str(r#\"# this is a comment\n        select a\"#, Rule::COMMENT)?"
---
[]
