prql-compiler/src/snapshots/prql_compiler__parser__test__parse_into_parse_tree-8.snap
---
source: prql-compiler/src/parser.rs
expression: "parse_tree_of_str(\"join country [id==employee_id]\", Rule::func_curry)?"
---
[
    Pair {
        rule: func_curry,
        span: Span {
            str: "join country [id==employee_id]",
            start: 0,
            end: 30,
        },
        inner: [
            Pair {
                rule: ident,
                span: Span {
                    str: "join",
                    start: 0,
                    end: 4,
                },
                inner: [],
            },
            Pair {
                rule: expr,
                span: Span {
                    str: "country ",
                    start: 5,
                    end: 13,
                },
                inner: [
                    Pair {
                        rule: ident,
                        span: Span {
                            str: "country",
                            start: 5,
                            end: 12,
                        },
                        inner: [],
                    },
                ],
            },
            Pair {
                rule: expr,
                span: Span {
                    str: "[id==employee_id]",
                    start: 13,
                    end: 30,
                },
                inner: [
                    Pair {
                        rule: list,
                        span: Span {
                            str: "[id==employee_id]",
                            start: 13,
                            end: 30,
                        },
                        inner: [
                            Pair {
                                rule: expr,
                                span: Span {
                                    str: "id==employee_id",
                                    start: 14,
                                    end: 29,
                                },
                                inner: [
                                    Pair {
                                        rule: ident,
                                        span: Span {
                                            str: "id",
                                            start: 14,
                                            end: 16,
                                        },
                                        inner: [],
                                    },
                                    Pair {
                                        rule: operator_compare,
                                        span: Span {
                                            str: "==",
                                            start: 16,
                                            end: 18,
                                        },
                                        inner: [],
                                    },
                                    Pair {
                                        rule: ident,
                                        span: Span {
                                            str: "employee_id",
                                            start: 18,
                                            end: 29,
                                        },
                                        inner: [],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
