prql-compiler/src/snapshots/prql_compiler__parser__test__parse_list.snap
---
source: prql-compiler/src/parser.rs
expression: "parse_tree_of_str(r#\"[1 + 1, 2]\"#, Rule::list).unwrap()"
---
[
    Pair {
        rule: list,
        span: Span {
            str: "[1 + 1, 2]",
            start: 0,
            end: 10,
        },
        inner: [
            Pair {
                rule: named_expr_call,
                span: Span {
                    str: "1 + 1",
                    start: 1,
                    end: 6,
                },
                inner: [
                    Pair {
                        rule: expr,
                        span: Span {
                            str: "1 + 1",
                            start: 1,
                            end: 6,
                        },
                        inner: [
                            Pair {
                                rule: expr_compare,
                                span: Span {
                                    str: "1 + 1",
                                    start: 1,
                                    end: 6,
                                },
                                inner: [
                                    Pair {
                                        rule: expr_add,
                                        span: Span {
                                            str: "1 + 1",
                                            start: 1,
                                            end: 6,
                                        },
                                        inner: [
                                            Pair {
                                                rule: expr_mul,
                                                span: Span {
                                                    str: "1 ",
                                                    start: 1,
                                                    end: 3,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: number,
                                                        span: Span {
                                                            str: "1",
                                                            start: 1,
                                                            end: 2,
                                                        },
                                                        inner: [],
                                                    },
                                                ],
                                            },
                                            Pair {
                                                rule: operator_add,
                                                span: Span {
                                                    str: "+",
                                                    start: 3,
                                                    end: 4,
                                                },
                                                inner: [],
                                            },
                                            Pair {
                                                rule: expr_mul,
                                                span: Span {
                                                    str: "1",
                                                    start: 5,
                                                    end: 6,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: number,
                                                        span: Span {
                                                            str: "1",
                                                            start: 5,
                                                            end: 6,
                                                        },
                                                        inner: [],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
            Pair {
                rule: named_expr_call,
                span: Span {
                    str: "2",
                    start: 8,
                    end: 9,
                },
                inner: [
                    Pair {
                        rule: expr,
                        span: Span {
                            str: "2",
                            start: 8,
                            end: 9,
                        },
                        inner: [
                            Pair {
                                rule: expr_compare,
                                span: Span {
                                    str: "2",
                                    start: 8,
                                    end: 9,
                                },
                                inner: [
                                    Pair {
                                        rule: expr_add,
                                        span: Span {
                                            str: "2",
                                            start: 8,
                                            end: 9,
                                        },
                                        inner: [
                                            Pair {
                                                rule: expr_mul,
                                                span: Span {
                                                    str: "2",
                                                    start: 8,
                                                    end: 9,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: number,
                                                        span: Span {
                                                            str: "2",
                                                            start: 8,
                                                            end: 9,
                                                        },
                                                        inner: [],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
