prql-compiler/src/snapshots/prql_compiler__parser__test__parse_number-2.snap
---
source: prql-compiler/src/parser.rs
expression: "parse_tree_of_str(r#\"2 + 2\"#, Rule::expr)?"
---
[
    Pair {
        rule: expr,
        span: Span {
            str: "2 + 2",
            start: 0,
            end: 5,
        },
        inner: [
            Pair {
                rule: number,
                span: Span {
                    str: "2",
                    start: 0,
                    end: 1,
                },
                inner: [],
            },
            Pair {
                rule: operator,
                span: Span {
                    str: "+",
                    start: 2,
                    end: 3,
                },
                inner: [],
            },
            Pair {
                rule: number,
                span: Span {
                    str: "2",
                    start: 4,
                    end: 5,
                },
                inner: [],
            },
        ],
    },
]
