prql-compiler/src/snapshots/prql_compiler__parser__test__parse_number-3.snap
---
source: prql-compiler/src/parser.rs
expression: "ast_of_string(r#\"2 + 2\"#, Rule::expr)?"
---
Expr:
  - Literal:
      Integer: 2
  - Operator: +
  - Literal:
      Integer: 2

